# fynth-ng

./: CMakeLists.txt  LICENSE  README.md  effects.cpp  effects.h  error.cpp  error.h  filter.cpp  filter.h  main.cpp  pipewire-audio.cpp  pipewire-audio.h  pipewire-midi.cpp  pipewire-midi.h  pipewire.cpp  pipewire.h  sample.cpp  sample.h  sound.cpp  sound.h
